--- a/mini_vulkan.vcxproj.filters
+++ b/mini_vulkan.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="VDeleter.hpp">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="vulkan_util.hpp">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
