--- a/mini_vulkan.vcxproj
+++ b/mini_vulkan.vcxproj
@@ -128,6 +128,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="VDeleter.hpp" />
+    <ClInclude Include="vulkan_util.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
